<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:id="@+id/signup_fragment"
    tools:context=".authentication.signup.view.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:elevation="@dimen/_1sdp"
                android:padding="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:background="@color/md_theme_light_secondaryContainer"
                app:shapeAppearanceOverlay="@style/circular" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="@dimen/_6sdp"
                android:text="@string/add_image"
                android:textColor="@color/rippleDark"
                android:textSize="@dimen/_12ssp" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintWidth_percent=".8">

            <ImageView
                android:id="@+id/imgPhone"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_email"
                app:tint="@color/textSecondary"
                android:importantForAccessibility="no" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@color/md_theme_light_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp"
                android:importantForAutofill="no" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutImage"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0.05">

            <ImageView
                android:id="@+id/img_username"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_rename" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@color/md_theme_light_background"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintWidth_percent=".8">

            <ImageView
                android:id="@+id/imgPass"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_9sdp"
                android:paddingBottom="@dimen/_9sdp"
                android:layout_weight="1"
                android:background="@color/md_theme_light_background"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textSize="@dimen/_12ssp" />
            <ImageView
                android:id="@+id/imgShowPass"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_remove_red_eye" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/re_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0">

            <ImageView
                android:id="@+id/re_img_pass"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/re_edt_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_9sdp"
                android:paddingBottom="@dimen/_9sdp"
                android:layout_weight="1"
                android:background="@color/md_theme_light_background"
                android:hint="@string/prompt_re_password"
                android:inputType="textPassword"
                android:textSize="@dimen/_12ssp" />
            <ImageView
                android:id="@+id/re_imgShowPass"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_remove_red_eye" />

        </LinearLayout>


        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_light_error"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_pass"
            app:layout_constraintVertical_bias="1" />


        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="false"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_pass"
            app:layout_constraintWidth_percent=".8"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_pass"
            app:layout_constraintWidth_percent=".8"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>